# linera-protocol-ch

.github/workflows/: docker.yml
configuration/compose/: validator.toml
configuration/k8s-local/: validator_1.toml
configuration/local/: validator_1.toml  validator_2.toml  validator_3.toml  validator_4.toml
configuration/prod/: validator_1.toml
docker/: compose.sh
examples/: Cargo.toml
examples/agent/: Cargo.toml
examples/llm/src/: service.rs
kubernetes/linera-validator/: build_and_redeploy.sh  deploy_gcp.sh  values-dev-gcp.yaml
kubernetes/linera-validator/templates/: proxy.yaml
linera-client/src/: client_context.rs
linera-client/src/unit_tests/: chain_listener.rs
linera-core/src/: client.rs  updater.rs
linera-core/src/unit_tests/: test_utils.rs
linera-rpc/src/: config.rs
linera-service/src/: server.rs
linera-service/src/cli_wrappers/: local_kubernetes_net.rs  local_net.rs
linera-service/src/linera/: main.rs
linera-service/src/proxy/: grpc.rs  main.rs
